[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AI-TRAVEL-PLANNER"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Mandeep Singh", email = "mandeep14042002@gmail.com"}
]
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-experimental",
    "fastapi",
    "python-dotenv",
    "streamlit",
    "uvicorn",
    "pydantic",
    "httpx",
    "requests",
    "langchain-google-community",
    "langchain-tavily",
    "langchain-groq",
    "langchain-openai",
    "langgraph",
    "langchain-google-community[places]"
]

[tool.setuptools]
# This explicitly finds all folders with __init__.py in your root
packages = {find = {where = ["."]}}

[tool.setuptools.package-data]
# This ensures non-python files (like your prompt library) are included
"*" = ["*.txt", "*.yaml", "*.md"]